syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = ".;proto";

service Goods{
    // 商品
    rpc GoodsListQuery(GoodsListQueryRequest) returns(GoodsListResponse);         // 根据过滤条件获取商品列表
    rpc GetGoodsByIDs(GoodsIDsRequest) returns(GoodsListResponse);      // 根据商品id批量获取商品信息
    rpc GetGoodsByID(GoodsIDRequest) returns(GoodsInfoResponse);        // 获取单个商品信息
    rpc CreateGoods(GoodsInfoRequest) returns (GoodsInfoResponse);      // 创建商品信息
    rpc DeleteGoods(GoodsIDRequest) returns (google.protobuf.Empty);    // 删除商品信息
    rpc UpdateGoods(GoodsInfoRequest) returns (google.protobuf.Empty);  // 更新商品信息

    // 商品分类
    rpc AllCategoryList(google.protobuf.Empty) returns(CategoryListResponse);       // 获取所有分类
    rpc GetSubCategory(GetSubCategoryRequest) returns(SubCategoryListResponse);     // 获取子分类列表
    rpc CreateCategory(CategoryInfoRequest) returns(CategoryInfoResponse);          // 新建分类信息
    rpc DeleteCategory(CategoryIDRequest) returns(google.protobuf.Empty);           // 删除分类
    rpc UpdateCategory(CategoryInfoRequest) returns(google.protobuf.Empty);         // 修改分类信息

    // 品牌
    rpc BrandList(PageInfo) returns(BrandListResponse);                 // 获取品牌列表
    rpc CreateBrand(BrandInfoRequest) returns(BrandInfoResponse);       // 新建品牌信息
    rpc DeleteBrand(BrandIDRequest) returns(google.protobuf.Empty);     // 删除品牌
    rpc UpdateBrand(BrandInfoRequest) returns(google.protobuf.Empty);   // 修改品牌信息

    // 商品分类与品牌
    rpc CategoryBrandList(PageInfo) returns(CategoryBrandListResponse);              // 获取分类与品牌列表信息
    rpc GetCategoryBrandByBrandID(BrandIDRequest) returns(BrandListResponse);        // 根据分类ID获取品牌信息
    rpc CreateCategoryBrand(CategoryBrandRequest) returns(CategoryBrandResponse);    // 添加品牌分类
    rpc DeleteCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty);    // 删除品牌分类
    rpc UpdateCategoryBrand(CategoryBrandRequest) returns(google.protobuf.Empty);    // 修改品牌分类

    // 轮播图
    rpc BannerList(google.protobuf.Empty) returns(BannerListResponse);  // 获取轮播图列表
    rpc CreateBanner(BannerRequest) returns(BannerResponse);            // 添加轮播图
    rpc DeleteBanner(BannerRequest) returns(google.protobuf.Empty);     // 删除轮播图
    rpc UpdateBanner(BannerRequest) returns(google.protobuf.Empty);     // 修改轮播图
}

message PageInfo {
    uint32 page_number = 1;
    uint32 page_size = 2;
}

message GoodsIDRequest {
    int32 id = 1;
}

message GoodsIDsRequest {
    repeated int32 id = 1;
}

message GoodsInfoRequest {
    int32 id = 1;
    int32 category_id = 2;
    int32 brand_id = 3;
    string name = 4;
    string brief = 5;
    string desc = 6;
    string sn = 7;
    int32 stock = 8;
    double market_price = 9;
    double shop_price = 10;
    string preview_image = 11;
    repeated string images = 12;
    repeated string desc_images = 13;
    bool is_on_sale = 14;
    bool is_free_shipping = 15;
    bool is_new = 16;
    bool is_hot = 17;
}

message GoodsListQueryRequest  {
    google.protobuf.Int32Value price_min = 1;
    google.protobuf.Int32Value price_max = 2;
    google.protobuf.BoolValue  is_hot = 3;
    google.protobuf.BoolValue  is_new = 4;
    google.protobuf.BoolValue  is_tab = 5;
    google.protobuf.Int32Value top_category = 6;
    google.protobuf.StringValue key_word = 7;
    google.protobuf.Int32Value brand = 8;
    PageInfo page_info = 9;
}

message GoodsInfoResponse {
    int32 id = 1;
    int32 category_id = 2;
    string name = 3;
    string goods_sn = 4;
    google.protobuf.Timestamp created_at = 5;
    string brief = 6;
    string desc = 7;
    double market_price = 8;
    double shop_price = 9;
    string preview_image = 10;
    repeated string images = 11;
    repeated string desc_images = 12;
    int32 click_num = 13;
    int32 sold_num = 14;
    int32 fav_num = 15;
    bool is_free_shipping = 16;
    bool is_new = 17;
    bool is_hot = 18;
    bool is_on_sale = 19;
    CategoryInfo category = 21;
    BrandInfoResponse brand = 22;
}

message CategoryInfo {
    int32 id = 1;
    string name = 2;
}

message GoodsListResponse {
    int64 total = 1;
    repeated GoodsInfoResponse data = 2;
}

message CategoryIDRequest {
    int32 id = 1;
}

message GetSubCategoryRequest {
    int32 id = 1;
    int32 level = 2;
}

message CategoryInfoRequest {
    int32 id = 1;
    string name = 2;
    int32 parent_category = 3;
    int32 level = 4;
    bool is_tab = 5;
}

message CategoryInfoResponse {
    int32 id = 1;
    string name = 2;
    int32 parent_category = 3;
    int32 level = 4;
    bool is_tab = 5;
}

message CategoryListResponse {
    int64 total = 1;
    repeated CategoryInfoResponse data = 2;
    string json_data = 3;
}

message SubCategoryListResponse {
    int64 total = 1;
    CategoryInfoResponse info = 2;
    repeated CategoryInfoResponse subcategory = 3;
}

message BrandIDRequest {
    int32 id = 1;
}

message BrandInfoRequest {
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

message BrandInfoResponse {
    int32 id = 1;
    string name = 2;
    string logo = 3;
}

message BrandListResponse {
    int64 total = 1;
    repeated BrandInfoResponse data = 2;
}

message CategoryBrandRequest{
    int32 id = 1;
    int32 category_id = 2;
    int32 brand_id = 3;
}

message CategoryBrandResponse{
    int32 id = 1;
    BrandInfoResponse brand = 2;
    CategoryInfoResponse category = 3;
}

message CategoryBrandListResponse {
    int64 total = 1;
    repeated CategoryBrandResponse data = 2;
}

message BannerRequest {
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

message BannerResponse {
    int32 id = 1;
    int32 index = 2;
    string image = 3;
    string url = 4;
}

message BannerListResponse {
    int64 total = 1;
    repeated BannerResponse data = 2;
}
